[package]
name = "cardamom"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.44"
atty = "0.2.14"
chrono = "0.4.19"
clap = { version = "2.33.3", default-features = false, features = ["suggestions", "color"] }
env_logger = "0.8.3"
log = "0.4.14"
native-tls = "0.2"
quick-xml = { version = "0.22.0", features = ["serialize"] }
regex = "1.5.4"
reqwest = { version = "0.11.6", features = ["blocking"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
shellexpand = "2.1.0"
termcolor = "1.1"
terminal_size = "0.1.15"
toml = "0.5.8"
unicode-width = "0.1.7"
uuid = { version = "0.8", features = ["v4"] }
